[package]
# Simplified Hyperspace relayer (https://github.com/ComposableFi/centauri) for testing purposes
name = "hyperspace-light"
version = "0.1.0"
edition = "2021"
authors = ["Farhad Shabani <farhad.shabani@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

# crates.io
anyhow = "1.0.65"
async-trait = "0.1.53"
bech32 = "0.9.1"
bitcoin = { version = "0.29.1", features = ["serde"] }
bytes = { version = "1.2.1", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", features = [
    "derive",
] }
dirs-next = "2.0.0"
log = "0.4.17"
env_logger = "0.9.0"
k256 = { version = "0.11.6", features = ["ecdsa-core", "ecdsa", "sha256"] }
hex = "0.4"
futures = "0.3.4"
prost = { version = "0.11" }
jsonrpsee = "0.16.1"
jsonrpsee-ws-client = "0.16.1"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = { version = "1.0.51" }
ss58-registry = "1.28.0"
tokio = { version = "1.19.2", features = [
    "macros",
    "sync",
    "rt",
    "time",
    "rt-multi-thread",
] }
tonic = { version = "0.8", features = ["tls", "tls-roots"] }
thiserror = "1.0.31"


# ibc
ibc = { version = "0.23.0" }
ibc-proto = { version = "0.23.0" }
ibc-relayer-types = { git = "https://github.com/informalsystems/hermes.git" }

# tendermint
tendermint = { version = "0.27.0", default-features = false, features = [
    "secp256k1",
] }
tendermint-proto = { version = "0.27.0", default-features = false }
tendermint-rpc = { version = "0.27.0", features = [
    "http-client",
    "websocket-client",
] }
tendermint-light-client = { version = "0.27.0", default-features = false, features = [
    "rpc-client",
    "secp256k1",
    "unstable",
] }
tendermint-light-client-verifier = { version = "0.27.0", default-features = false }
# tendermint-testgen = { version = "0.25.0" }

[[test]]
name = "cosmos_cosmos"
